# clickhouse_objects_analysis

./: .gitignore  README.md  ch_view_dependencies.py  dependencies_to_mermaid.py  pyproject.toml
generated_ch_parser/: ClickHouseLexer.py  ClickHouseParser.interp  ClickHouseParser.py  ClickHouseParserVisitor.py  readme.md
tests/: test_mermaid_deps.py
